--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+
+    <meta charset="UTF-8">
+    <meta name="description" content="This is a Pharmacy Store to search for any medicine or ask for advice">
+
     <title>Pharmacy</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    Hi Pharmachy
+
+    <h1>Shanab Pharmacy</h1>
+    <p>Welcome to Your Pharmacy&comma; You can search for any medicine from search button OR ask for help to be helped
+        &colon;&rpar;</p>
+    <p>Hurry Up We have <b>SALE</b> !</p>
+    <a href="https://www.youtube.com/" target="_blank" title="youtube.com">YouTube</a>
+
+    <ul>
+        <li>Facebook</li>
+        <li>Instagram </li>
+        <li>Twitter</li>
+    </ul>
+
+    <ol type="1" start="1">
+        <li>Facebook</li>
+        <li>Instagram</li>
+        <li>Twitter</li>
+    </ol>
+
+    <table border="1">
+
+        <caption>
+            Table Caption
+        </caption>
+
+        <thead>
+            <tr>
+                <th>1</th>
+                <th>2</th>
+                <th>3</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>First 1</td>
+                <td>First 2</td>
+                <td>First 3</td>
+            </tr>
+            <tr>
+                <td>Second 1</td>
+                <td>Second 2</td>
+                <td>Second 3</td>
+            </tr>
+            <tr>
+                <td>Third 1</td>
+                <td>Third 2</td>
+                <td>Third 3</td>
+            </tr>
+        </tbody>
+
+        <tfoot>
+            <tr>
+                <td colspan="2">Total</td>
+                <td>sum</td>
+            </tr>
+        </tfoot>
+
+    </table>
+
 </body>
 
 </html>
