--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 
     </table>
 
+    <form action="https://www.youtube.com/" method="get" target="_blank">
+        <input type="text" name="search" placeholder="Search">
+        <input type="submit" value="Search">
 </body>
 
 </html>
