--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Pharmacy</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
