Start Learning CSS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>Hurry Up We have <b>SALE</b> !</p>
     <a href="https://www.youtube.com/" target="_blank" title="youtube.com">YouTube</a>
 
-    <ul>
+    <!-- <ul>
         <li>Facebook</li>
         <li>Instagram </li>
         <li>Twitter</li>
@@ -74,7 +74,7 @@
         Your browser does not support the audio element.
     </audio>
 
-    <video hidden width="655" height="455" controls poster="Images/wallpaperflare.com_wallpaper.jpg">
+    <video width="655" height="455" controls poster="Images_HTML/wallpaperflare.com_wallpaper.jpg">
         <source src="Sounds/e85836aa3abf468d967f3dcb7e046dfd.mp4" type="video/mp4">
         Your browser does not support the video tag.
         <track src="file1.vtt" kind="subtitles" srclang="ar" label="Arabic">
@@ -184,7 +184,7 @@
             <input type="reset" value="Reset">
             <input type="submit" value="Send">
         </div>
-    </form>
+    </form> -->
 
 </body>
 
