--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 
 <body>
 
-    <h1>Shanab Pharmacy</h1>
+    <p>Welcome to Your Pharmacy&comma; You can search for any medicine from search button OR ask for help to be helped
+        &colon;&rpar;</p>
+    <p>Hurry Up We have <b>SALE</b> !</p>
+
+    <!-- <h1>Shanab Pharmacy</h1>
     <p>Welcome to Your Pharmacy&comma; You can search for any medicine from search button OR ask for help to be helped
         &colon;&rpar;</p>
     <p>Hurry Up We have <b>SALE</b> !</p>
     <a href="https://www.youtube.com/" target="_blank" title="youtube.com">YouTube</a>
 
-    <!-- <ul>
+    <ul>
         <li>Facebook</li>
         <li>Instagram </li>
         <li>Twitter</li>
