--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
 <body>
 
-    <p>Welcome to Your Pharmacy&comma; You can search for any medicine from search button OR ask for help to be helped
-        &colon;&rpar;</p>
-    <p>Hurry Up We have <b>SALE</b> !</p>
 
-    <!-- <h1>Shanab Pharmacy</h1>
+    <div>Paragraph1</div>
+    <div>Paragraph2</div>
+    <div>Paragraph3</div>
+    <div>Paragraph4</div>
+
+    <!--<h1>Shanab Pharmacy</h1>
     <p>Welcome to Your Pharmacy&comma; You can search for any medicine from search button OR ask for help to be helped
         &colon;&rpar;</p>
     <p>Hurry Up We have <b>SALE</b> !</p>
