CSS Done with 60%

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 
 <body>
 
-
-    <div>Paragraph1</div>
-    <div>Paragraph2</div>
-    <div>Paragraph3</div>
-    <div>Paragraph4</div>
+    <div class="flex">
+        <div>One</div>
+        <div>Two</div>
+        <div>Three</div>
+        <div>Four</div>
+        <div>Five</div>
+        <div>Six</div>
+        <div>Seven</div>
+    </div>
 
     <!--<h1>Shanab Pharmacy</h1>
     <p>Welcome to Your Pharmacy&comma; You can search for any medicine from search button OR ask for help to be helped
