--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="flex">
+    <div class="grid">
         <div>One</div>
         <div>Two</div>
         <div>Three</div>
