--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="description" content="This is a Pharmacy Store to search for any medicine or ask for advice">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Pharmacy</title>
 
